# Copyright 2023-2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(displayfilter)
add_subdirectory(drawing)
add_subdirectory(lpe)
add_subdirectory(mcrt_common)
add_subdirectory(shading)
add_subdirectory(texturing)
add_subdirectory(geom)
add_subdirectory(rt)
add_subdirectory(pbr)
add_subdirectory(rndr)
